--- a/projects/static/home.css
+++ b/projects/static/home.css
@@ -1,27 +1,178 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
-  text-align: center;
-  margin:0px;
-  padding: 0px;
-  font-family: 'pooppins',sans-serif;
-}
+  *{
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
 
-h1 {
-  text-align: center;
-}
+   }
 
-.btn {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-}
+    body {
+      font-family: 'poppins', sans-serif;
+      margin: 0;
+      height:100vh;
+      background-image: url('static/img/bg-image.jpg');
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
 
-.btn:hover {
-  background-color:#3e8e41;
-}
+
+    }
+
+    .navbar {
+      height: 80px;
+      width: 100%;
+      background: rgba(0,0,0,0.6);
+      align-items: center;
+      margin-bottom:1rem;
+      position: absolute;
+      top:0;
+
+    }
+
+    .navbar ul {
+       float: right;
+       margin-right: 40px;
+    }
+    .navbar ul li{
+       list-style: none;
+       margin: 0 8px;
+       display: inline-block;
+       line-height: 58px;
+       }
+    .navbar ul li a{
+       text-decoration: none;
+       color: #fff;
+       font-size: 20px;
+       padding: 6px 13px;
+       font-family: 'Robot', sans-serif;
+       transition: .4s;
+    }
+    .navbar ul li a.active,
+    .navbar ul li a:hover{
+       background: #6495ED;
+      outline: none;
+      border-radius: 35px;
+      font-size: 1.4rem;
+      font-weight: 25px;
+
+    }
+
+
+    .hero {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color:  #000000;
+      text-align: center;
+      padding:50px 30px 19px;
+
+    }
+    .hero img{
+       height:100vh;
+       width: 215vh;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+
+
+
+    .center {
+      position: absolute;
+      top: 50%;
+      left:50%;
+      transform: translate(-50%, -50%);
+      font-family: sans-serif;
+      font-size: 70px;
+      font-weight: bold;
+      margin-bottom: 1rem;
+      text-align: center;
+      user-select: none;
+    }
+
+   .tagline {
+     position: absolute;
+      top: 60%;
+      left:50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.5rem;
+      font-family: sans-serif;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+   .tagline P {
+       font-size: 20px;
+       margin: 0.5rem 0;
+
+   }
+
+    .cta-button {
+      padding: 1rem 2rem;
+      position: absolute;
+      top: 70%;
+      left:50%;
+      transform: translate(-50%, -50%);
+      background-color: #F0FFFF;
+      color: #F0FFFF;
+      border: 1px solid light black;
+      outline: none;
+      border-radius: 25px;
+      font-size: 1.2rem;
+      font-weight: 25px;
+      text-decoration: none;
+      cursor: pointer;
+      text-align: center;
+      align-items: center;
+    }
+
+    .features {
+      padding: 4rem 0;
+      background-color: #f7f7f7;
+      text-align: center;
+    }
+
+    .features h2 {
+      font-size: 2.8rem;
+      margin-bottom: 2rem;
+    }
+    .features p {
+      font-size: 1.3rem;
+      margin-bottom: 1rem;
+    }
+
+    .feature {
+      width: 30%;
+      display: inline-block;
+      flex-direction: column;
+      align-items: center;
+      margin: 0 2rem;
+      text-align: left;
+    }
+
+    .feature img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+    }
+
+    .feature h3 {
+      font-size: 1.5rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .feature p {
+      font-size: 1.3rem;
+    }
+
+    .footer {
+      background-color: #808080;
+      color: sky blue;
+      text-align: center;
+      padding: 2rem 0;
+    }
+
+    .footer p {
+      margin: 0;
+    }
