--- a/projects/templates/signup.html
+++ b/projects/templates/signup.html
@@ -7,13 +7,15 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Custom Theme files -->
-<link href="static/css/base.css" rel="stylesheet" type="text/css" media="all" />
+<link href="static/base.css" rel="stylesheet" type="text/css" media="all" />
 <!-- //Custom Theme files -->
 <!-- web font -->
 <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
 <!-- //web font -->
 </head>
 <body>
+  <form action="/" method="post">
+      {% csrf_token %}
 	<!-- main -->
 	<div class="main-w3layouts wrapper">
 		<h1>Creative SignUp Form</h1>
@@ -31,16 +33,12 @@
 						</label>
 						<div class="clear"> </div>
 					</div>
-					<input type="submit" value="register">
+					<a href="signup"><input type="submit" value="register">
 				</form>
-				<p>Don't have an Account? <a href="#"> Login Now!</a></p>
+				<p>Don't have an Account? <a href="signin"> Login Now!</a></p>
 			</div>
 		</div>
-		<!-- copyright -->
-		<div class="colorlibcopy-agile">
-			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
-		</div>
-		<!-- //copyright -->
+
 		<ul class="colorlib-bubbles">
 			<li></li>
 			<li></li>
@@ -54,6 +52,6 @@
 			<li></li>
 		</ul>
 	</div>
-	<!-- //main -->
+  </form>	<!-- //main -->
 </body>
 </html>
